--- a/roles/environments/tasks/main.yml
+++ b/roles/environments/tasks/main.yml
@@ -1,5 +1,21 @@
 ---
 
+#CREO L'AMBIENTE LIFERAY SULLA MACCHINA TARGET
+
 #creo la cartella w1 all'interno della macchina target 
 - name: Creating w1 dir 
   shell: mkdir /w1 
+
+#Copio e Decomprimo il file Con Tomcat nella directory /w1
+- name: Unzip Tomcat folder in the w1 directory...
+  ansible.builtin.unarchive:
+    src: "{{ tomcat_zip_path }}"
+    dest: /w1
+
+#Rinomino la cartella con tomcat
+- name: Renaming tomcat folder
+  shell: mv -v /w1/{{ tomcat }} /w1/tomcat
+
+  #Svuoto la cartella /w1/tomcat/webapps/ e al suo interno creo la cartella ROOT
+- name: Deleting webapps dir contains and create within ROOT dir
+  shell: rm -rf /w1/tomcat/webapps/* && mkdir /w1/tomcat/webapps/ROOT
