--- a/roles/environments/tasks/main.yml
+++ b/roles/environments/tasks/main.yml
@@ -2,9 +2,9 @@
 
 #CREO L'AMBIENTE LIFERAY SULLA MACCHINA TARGET
 
-#creo la cartella w1 all'interno della macchina target 
-- name: Creating w1 dir 
-  shell: mkdir /w1 
+#Creo la cartella w1 all'interno della macchina target 
+# - name: Creating w1 dir 
+#   shell: mkdir /w1 
 
 #Copio e Decomprimo il file Con Tomcat nella directory /w1
 - name: Unzip Tomcat folder in the w1 directory...
