--- a/roles/environments/tasks/main.yml
+++ b/roles/environments/tasks/main.yml
@@ -13,6 +13,7 @@
   ansible.builtin.unarchive:
     src: "{{ tomcat_zip_path }}"
     dest: /w1
+    remore_src: yes
 
 #Rinomino la cartella con tomcat
 - name: Renaming tomcat folder
