fixed some in env file

--- a/roles/vars/main.yml
+++ b/roles/vars/main.yml
@@ -1,3 +1,4 @@
-#vars file for Liferay deploy
+---
+#vars for Liferay deploy
 tomcat_zip_path: "/tmp/sw_liferay/apache_tomcat-9.0.73.zip"
 tomcat: "apache-tomcat-9.0.73"
